# rt_weather_msgs

./: CMakeLists.txt  LICENSE  README.md  package.xml
msg/: BarometricPressure.msg  CumulativeHailfall.msg  CumulativePrecipitation.msg  HailfallRate.msg  Irradiance.msg  MeteorologicalOpticalRange.msg  ParticleDensity.msg  ParticleSizeVelocityDistribution.msg  PrecipitationRate.msg  SoundNoise.msg  SpectralTransmittance.msg  Transmittance.msg  Wind.msg
